{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 14,
  "lineage": "b6b74556-ca72-0d4c-8d84-42494c0d5e46",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260702",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/disks/k3s-master-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-master-prod",
            "instance_id": "4736585250977630916",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIA72ZroKYSwuQcSiWo+aRwMU4Q0/fSvK47YEVgTpLYz3 codespace@codespaces-d4476d"
            },
            "metadata_fingerprint": "_tsxPao5rTA=",
            "name": "k3s-master-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.119.1.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-public-subnet-prod",
                "subnetwork_project": "kkgcplabs01-038"
              }
            ],
            "project": "kkgcplabs01-038",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-master-prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k3s-master"
            ],
            "tags_fingerprint": "67eYq6digLc=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260702",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 40,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/disks/k3s-worker-1-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-worker-1-prod",
            "instance_id": "7938024409940380355",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIA72ZroKYSwuQcSiWo+aRwMU4Q0/fSvK47YEVgTpLYz3 codespace@codespaces-d4476d"
            },
            "metadata_fingerprint": "_tsxPao5rTA=",
            "name": "k3s-worker-1-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.190.60",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-public-subnet-prod",
                "subnetwork_project": "kkgcplabs01-038"
              }
            ],
            "project": "kkgcplabs01-038",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-worker-1-prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k3s-worker"
            ],
            "tags_fingerprint": "zAMOL1H6VGs=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260702",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 40,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/disks/k3s-worker-2-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-worker-2-prod",
            "instance_id": "7455515096574347971",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIA72ZroKYSwuQcSiWo+aRwMU4Q0/fSvK47YEVgTpLYz3 codespace@codespaces-d4476d"
            },
            "metadata_fingerprint": "_tsxPao5rTA=",
            "name": "k3s-worker-2-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.213.120",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-public-subnet-prod",
                "subnetwork_project": "kkgcplabs01-038"
              }
            ],
            "project": "kkgcplabs01-038",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/zones/us-central1-a/instances/k3s-worker-2-prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k3s-worker"
            ],
            "tags_fingerprint": "zAMOL1H6VGs=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-07-07T23:54:13.770-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-038/global/firewalls/k3s-allow-internal-traffic-prod",
            "log_config": [],
            "name": "k3s-allow-internal-traffic-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "priority": 1000,
            "project": "kkgcplabs01-038",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/firewalls/k3s-allow-internal-traffic-prod",
            "source_ranges": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-07T23:54:12.591-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-038/global/firewalls/k3s-allow-api-server-prod",
            "log_config": [],
            "name": "k3s-allow-api-server-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "priority": 1000,
            "project": "kkgcplabs01-038",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/firewalls/k3s-allow-api-server-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k3s-master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-07T23:54:12.379-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-038/global/firewalls/k3s-allow-ssh-prod",
            "log_config": [],
            "name": "k3s-allow-ssh-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "priority": 1000,
            "project": "kkgcplabs01-038",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/firewalls/k3s-allow-ssh-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k3s-master",
              "k3s-worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-07T23:54:13.475-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-038/global/firewalls/k3s-allow-web-traffic-prod",
            "log_config": [],
            "name": "k3s-allow-web-traffic-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "priority": 1000,
            "project": "kkgcplabs01-038",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/firewalls/k3s-allow-web-traffic-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k3s-master",
              "k3s-worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "mtu": 0,
            "name": "k3s-vpc-prod",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "9195926275449965842",
            "project": "kkgcplabs01-038",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-07T23:54:12.633-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/kkgcplabs01-038/regions/us-central1/routers/k3s-router-prod",
            "name": "k3s-router-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "project": "kkgcplabs01-038",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/routers/k3s-router-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "kkgcplabs01-038/us-central1/k3s-router-prod/k3s-nat-prod",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "k3s-nat-prod",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "kkgcplabs01-038",
            "region": "us-central1",
            "router": "k3s-router-prod",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-private-subnet-prod",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-07T23:54:12.637-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-private-subnet-prod",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "k3s-private-subnet-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-038",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-private-subnet-prod",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-07T23:54:13.096-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-public-subnet-prod",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "k3s-public-subnet-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/global/networks/k3s-vpc-prod",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-038",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-038/regions/us-central1/subnetworks/k3s-public-subnet-prod",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    }
  ]
}